--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>快帮忙</title>
+    <title>果之吻</title>
 
     <script language="javascript" type="text/javascript"> 
 	// 以下方式直接跳转
-	window.location.href='http://115.29.196.177';
+	window.location.href='http://www1.guozhiwen.com';
 	</script>
   </head>
 
