跳转到镜像

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 
     <title>果之吻</title>
 
-    <!--
+    
     <script language="javascript" type="text/javascript"> 
 	// 以下方式直接跳转
 	window.location.href='http://www1.guozhiwen.com';
 	</script>
-	 -->
+	
   </head>
 
   <body>
 
-  <h1 style="color:white">网站目前正在维护中...</h1>
+  <!--
+  <h1 style="color:white">网站目前正在维护中...</h1> -->
 
   </body>
 </html>
