--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <script language="javascript" type="text/javascript"> 
 	// 以下方式直接跳转
-	window.location.href='http://guoguoguo.qiniudn.com/';
+	window.location.href='http://dn-guozhiwen.qbox.me';
 	</script>
 	
   </head>
